--- a/Goida.html
+++ b/Goida.html
@@ -1,106 +1,81 @@
-[file name]: 1000006575.jpg
-[file content begin]
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Элемент details в HTML5</title>
-<head>
+    <title>Таблицы в HTML5</title>
+</head>
 <body>
-    <details>
-    <summary>Флагманы 2015</summary>
-    <ul>
-    <li>iPhone 6S Plus</li>
-    <li>Nexus 6P</li>
-    <li>Galaxy S6 Edge</li>
-    <li>Lumia 950 XL</li>
-    </ul>
-    </details>
+    <table>
+    <tr>
+    <td>Модель</td> <td>Компания</td> <td>Цена</td>
+</tr>
+    <tr>
+    <td>Nexus 6P</td> <td>Huawei</td> <td>49000</td>
+</tr>
+    <tr>
+    <td>iPhone 6S PLus</td> <td>Apple</td> <td>62000</td>
+</tr>
+    <tr>
+    <td>Lumia 950 XL</td> <td>Microsoft</td> <td>35000</td>
+</tr>
+    </table>
 </body>
 </html>
+
+<table>
+    <caption><b>Популярные смартфоны 2015</b></caption>
+    <thead>
+    <tr>
+    <th>Модель</th> <th>Компания</th> <th>Цена</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+    <td>Nexus 6P</td> <td>Huawei</td> <td>49000</td>
+    </tr>
+    <tr>
+    <td>iPhone 6S PLus</td> <td>Apple</td> <td>62000</td>
+    </tr>
+    <tr>
+    <td>Lumia 950 XL</td> <td>Microsoft</td> <td>35000</td>
+    </tr>
+    </tbody>
+    <tfoot>
+    <tr>
+    <th colspan="3">Информация по состоянию на 17 марта</th>
+    </tr>
+    </tfoot>
+</table>
 
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Списки в HTML5</title>
-<head>
+    <title>Таблицы в HTML5</title>
+    <style>
+    td{
+    width: 60px;
+    height:60px;
+    border: solid 1px silver;
+    text-align:center;
+    }
+    </style>
+</head>
 <body>
-    <dl>
-    <dr>Онтология</dr>
-    <dd>Раздел философии, изучающий фундаментальные принципы бытия</dd>
-    <dr>Гносеология</dr>
-    <dd>Философская дисциплина, занимающаяся исследованиями, критикой и теориями познания</dd>
-    <dr>Производственные отношения</dr>
-    <dd>Совокупность отношений между людьми, складывающихся в процессе общественного производства,
-    обмена, распределения материальных благ и услуг.</dd>
-    </dl>
+    <table>
+    <tr>
+    <td rowspan="2" style="background-color:green;">1</td>
+    <td>2</td>
+    <td>3</td>
+</tr>
+    <tr>
+    <td>4</td>
+    <td>5</td>
+</tr>
+    <tr>
+    <td>6</td>
+    <td colspan="2" style="background-color:red;">7</td>
+</tr>
+    </table>
     </body>
-</html>
-Фреймы
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Фреймы в HTML5</title>
-<head>
-<body>
-    <h2>Элемент iframe</h2>
-    <iframe src="http://wikipedia.com" width="400" height="200">
-    </iframe>
-</body>
-</html>
-[file content end]
-
-[file name]: 1000006576.jpg
-[file content begin]
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Элемент Figure в HTML5</title>
-</head>
-<body>
-<div>
-    <p>Lorem ipsum dolor ... </p>
-    <figure>
-    <figeaption>Февраль 2013</figeaption>
-    <img src="dubi.png" alt="Зимний пейзаж">
-    </figure>
-    <p>Lorem ipsum dolor ... </p>
-    </div>
-</body>
-</html>
-
-Ссылки
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Ссылки</title>
-</head>
-<body>
-    <a href="content.html">Учебник по HTML5</a>
-</body>
-</html>
-
-Внутренние ссылки
-
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Внутренние ссылки</title>
-</head>
-<body>
-    <a href="#paragraph1">Параграф 1</a> | <a href="#paragraph2">Параграф 2</a> | <a href="#paragraph3">Параграф 3</a>
-    <h2 id="paragraph1">Параграф 1</h2>
-    <p>Содержание параграфа 1</p>
-    <h2 id="paragraph2">Параграф 2</h2>
-    <p>Содержание параграфа 2</p>
-    <h2 id="paragraph3">Параграф 3</h2>
-    <p>Содержание параграфа 3</p>
-</body>
-</html>
-[file content end]
+             </html>
